Minor fixes after feedback. Added credits page.

--- a/lab-instructions/dodlabs.tex
+++ b/lab-instructions/dodlabs.tex
@@ -74,6 +74,14 @@
 	escapeinside={(*@}{@*)},
 }
 
+\setlist[description]{
+	style=multiline,
+	align=right,
+	itemsep=1mm,
+	parsep=0mm,
+	rightmargin=1cm,
+}
+
 % Section styles.
 \setsecheadstyle{\huge\sffamily\bfseries\raggedright} 
 \setsubsecheadstyle{\Large\sffamily\bfseries\raggedright} 
@@ -187,6 +195,8 @@ Här samlas kort information och hjälp som kan vara användbar under laboration
 	%       TODO
 \end{itemize}
 
+\newpage
+\include{modules/acknowledgements}
 
 \newpage
 \include{modules/unix/unix_terminal}
