Forgot to add credits.

--- a/lab-instructions/modules/acknowledgements.tex
+++ b/lab-instructions/modules/acknowledgements.tex
@@ -24,6 +24,7 @@ Nedan följer en lista på personer som har bidragit med feedback:
 \begin{itemize}[label={},itemsep=1mm,parsep=0mm]
     \item Björn Regnell
     \item Johan Ekberg
+    \item Maximilian Waldenfeldt Uggla
 \end{itemize}
 
 \vspace{0.5cm}
