Fixing CI workflow (4)

--- a/lab-instructions/dodlabs.tex
+++ b/lab-instructions/dodlabs.tex
@@ -196,22 +196,22 @@ Här samlas kort information och hjälp som kan vara användbar under laboration
 \end{itemize}
 
 \newpage
-\include{modules/acknowledgements}
+\include{./modules/acknowledgements}
 
 \newpage
-\include{modules/unix/unix_terminal}
-
-
-\newpage
-\include{modules/latex/latex}
+\include{./modules/unix/unix_terminal}
 
 
 \newpage
-\include{modules/git/git}
+\include{./modules/latex/latex}
 
 
 \newpage
-\include{modules/machine-code/machine-code}
+\include{./modules/git/git}
+
+
+\newpage
+\include{./modules/machine-code/machine-code}
 
 
 \newpage
