Fixing CI workflow (9)

--- a/lab-instructions/modules/latex/latex.tex
+++ b/lab-instructions/modules/latex/latex.tex
@@ -60,4 +60,4 @@
 	\item Om du har tid: prova sådana möjligheter i \LaTeX\ som du inte har behövt använda tidigare: listor av olika slag, innehållsförteckning, mera avancerade formler, osv.
 \end{Datorarbete}
 
-\includepdf[pages=-]{./modules/latex/example/latexlosning}
+\includepdf[pages=-]{modules/latex/example/latexlosning}
