Have not committed for a while. Time to make a backup!

--- a/lectures/intro/intro.tex
+++ b/lectures/intro/intro.tex
@@ -14,10 +14,11 @@
 		      \end{itemize}
 		\item Vad innehåller kursen?
 		      \begin{itemize}
-			      \item Tre ämnen, med vardera en föreläsning och en laboration
+			      \item Fyra ämnen, med vardera en föreläsning och en laboration
 			      \item Unix och Linux
 			      \item \LaTeX
 			      \item Git och Github
+			      \item Maskinkod
 		      \end{itemize}
 		\item Läses tillsammans med EDAA45 (pgk, Programmering grundkurs)
 	\end{itemize}
@@ -43,6 +44,7 @@
 			      \item Laboration 1, Linux (Första laborationen redan imorgon!)
 			      \item Laboration 2. \LaTeX
 			      \item Laboration 3, Git
+			      \item Laboration 4, Maskinkod
 		      \end{itemize}
 	\end{itemize}
 \end{frame}
