--- a/lectures/latex/latex.tex
+++ b/lectures/latex/latex.tex
@@ -30,9 +30,9 @@ What You See Is What You Get
 \end{center}
 
 \blankline
-Det innebär att det man ser på skärmen ser likadant ut som
-det som kommer
+Det innebär att det man ser på skärmen ser likadant ut som det som kommer
 att skrivas på papperet: teckensnitt, storlekar, avstånd, \ldots
+
 Det innebär också att det inte blir bättre än vad det ser ut
 på skärmen (What You See Is \emph{All} You Get).
 \end{frame} 
