--- a/lectures/intro/slides.tex
+++ b/lectures/intro/slides.tex
@@ -1,25 +1,19 @@
 \documentclass[trans]{beamer} 
 
-\includeonly{
-	intro
-}
-\usepackage{sansmathaccent}
-\pdfmapfile{+sansmathaccent.map}
+\includeonly{intro}
 
 \usepackage{selthcsslides}
 \usecolortheme{lucolors}
 
-% Swedish.
-\usepackage[T1]{fontenc}
-\usepackage[swedish]{babel}
+% \usepackage[swedish]{babel}
+% Swedish setup using polyglossia for better multilingual support
+\usepackage{polyglossia}
+\setmainlanguage{swedish}
 
 \usepackage{url}
-%\usepackage{3latex/leftrightexample-new} % Per Foreby
+\usepackage{datetime2}
 
-%\author[]{Roger Henriksson} 
-%\institute{\url{roger.henriksson@cs.lth.se}}
-%\date{} 
-\author[]{Mattias Nordahl} 
+\author[]{Mattias Nordahl}
 \institute{\url{mattias.nordahl@cs.lth.se}}
 \date{} 
 
@@ -34,7 +28,7 @@
 \vspace{-2\baselineskip}
 }
 
-\date{2021/22} 
+\date{\the\year/\the\numexpr\year-1999} 
 
 % Include actual slides
 \include{intro}
