Spruced up linux lecture. Reduced amount of text on slides.

--- a/lectures/unix/images/file-tree.tex
+++ b/lectures/unix/images/file-tree.tex
@@ -44,6 +44,13 @@
                 [ma1337no-s]
                 [uw3307bq-s
                     [Downloads]
+                    [pgk
+                        [lab1
+                            [kojo.scala,draw=none]
+                        ]
+                        [lab2]
+                        [\(\ldots\),draw=none]
+                    ]
                     [dod
                         [lab1
                             [\(\ldots\),draw=none]
@@ -54,7 +61,6 @@
                         [lab3]
                         [lab4]
                     ]
-                    [pgk]
                     [\(\ldots\),draw=none]
                 ]
                 [\(\ldots\),draw=none]
