--- a/lectures/unix/slides.tex
+++ b/lectures/unix/slides.tex
@@ -2,6 +2,9 @@
 
 \includeonly{unix}
 
+% Include before selthcsslides to avoid styles being overridden
+% \usepackage{enumitem}
+
 \usepackage{selthcsslides}
 \usecolortheme{lucolors}
 
@@ -20,6 +23,7 @@
 
 \usepackage{listings}
 \lstset{resetmargins=true}
+
 
 % Redefine the Code listing environment to reset margins for each listing
 \lstnewenvironment{GobbleCode}[2][\baselineskip]
