--- a/lectures/unix/unix.tex
+++ b/lectures/unix/unix.tex
@@ -113,60 +113,152 @@
 
 \end{frame}
 
-\begin{frame}[fragile=singleslide]
-    \frametitle{Filnamn}
-    I praktiken är det inte så rörigt som det ser ut på den förra bilden!
-    Ett fullständigt (absolut) filnamn börjar från rotkatalogen och man räknar upp alla katalogerna med \code{/} emellan:
+% \begin{frame}[fragile=singleslide]
+%     \frametitle{Filnamn}
+%     I praktiken är det inte så rörigt som det ser ut på den förra bilden!
+%     Ett fullständigt (absolut) filnamn börjar från rotkatalogen och man räknar upp alla katalogerna med \code{/} emellan:
 
+%     \begin{Code}
+%         /h/d24/b/uw3307bq-s/dod/lab1/example.txt
+%     \end{Code}
+
+%     Men operativsystemet håller reda på en \emph{aktuell katalog}, som ungefär betyder \emph{``var i filträdet befinner jag mig just nu?''}. Istället för att ange det absoluta filnamnet, räcker det att ange vägen med start från den aktuella katalogen -- ett s.k. \emph{relativt} filnamn.
+
+%     \halfblankline
+
+%     Om \code{uw3307bq-s} (användarens \emph{hemkatalog}) är aktuell katalog så kommer man åt filen ovan med namnet:
+
+%     \begin{Code}
+%         dod/lab1/example.txt
+%     \end{Code}
+
+% \end{frame}
+
+\begin{frame}[fragile=singleslide]
+    \frametitle{Filnamn och sökvägar}
+
+    \textbf{Absolut filnamn:}
     \begin{Code}
         /h/d24/b/uw3307bq-s/dod/lab1/example.txt
     \end{Code}
 
-    Men operativsystemet håller reda på en \emph{aktuell katalog}, som ungefär betyder \emph{``var i filträdet befinner jag mig just nu?''}. Istället för att ange det absoluta filnamnet, räcker det att ange vägen med start från den aktuella katalogen -- ett s.k. \emph{relativt} filnamn.
-
-    \halfblankline
-
-    Om \code{uw3307bq-s} (användarens \emph{hemkatalog}) är aktuell katalog så kommer man åt filen ovan med namnet:
-
+    \textbf{Relativt filnamn:}
     \begin{Code}
         dod/lab1/example.txt
     \end{Code}
 
+    \textbf{Termer:}
+    \begin{itemize}
+        \item Sökväg (eng. path) -- vägen till en fil
+        \item Absolut sökväg -- från rotkatalogen
+        \item Relativ sökväg -- från aktuell katalog
+        \item Aktuell katalog -- \emph{där du är i filträdet}
+    \end{itemize}
+
 \end{frame}
+
+
+% \begin{frame}[fragile=singleslide]
+%     \frametitle{Förkortade filnamn}
+%     En del filer har förkortade namn:
+
+%     \blankline
+%     \begin{tabular}{cl}
+%         \url{~}     & (tilde) hemkatalogen för aktuell användare (Alt Gr + $\sim$ ) \\
+%         \url{~user} & hemkatalogen för användaren med användarnamnet user           \\
+%         \code{.}    & (punkt) aktuell katalog                                       \\
+%         \code{..}   & (punktpunkt) katalogen ovanför aktuell katalog i filträdet    \\
+%     \end{tabular}
+
+%     \blankline
+%     Antag att \code{\url{~}/dod/lab1} är aktuell katalog. Man kan navigera upp och ned i filträdet enligt följande exempel:
+
+%     \begin{GobbleCode}{6}
+%         ~/pgk/lab1/kojo.scala
+%         (till hemkatalogen, ner i pfk, ner i lab1)
+
+%         ../../pgk/lab1/kojo.scala
+%         (upp ett steg, upp ett steg, ner i pgk, ner i lab1)
+%     \end{GobbleCode}
+
+% \end{frame}
 
 \begin{frame}[fragile=singleslide]
     \frametitle{Förkortade filnamn}
-    En del filer har förkortade namn:
+
+    \textbf{Förkortningar:}
+
+    Vissa filnamn har speciella betydelser:
 
     \blankline
     \begin{tabular}{cl}
-        \url{~}     & (tilde) hemkatalogen för aktuell användare (Alt Gr + $\sim$ ) \\
-        \url{~user} & hemkatalogen för användaren med användarnamnet user           \\
-        \code{.}    & (punkt) aktuell katalog                                       \\
-        \code{..}   & (punktpunkt) katalogen ovanför aktuell katalog i filträdet    \\
+        \url{~}     & Hemkatalog (tilde) \\
+        \url{~user} & Användarens hemkatalog \\
+        \code{.}    & Aktuell katalog (punkt) \\
+        \code{..}   & Överordnad katalog (punktpunkt) \\
     \end{tabular}
-
     \blankline
-    Antag att \code{\url{~}/dod/lab1} är aktuell katalog. Man kan navigera upp och ned i filträdet enligt följande exempel:
+
+    \textbf{Exempel:}
+
+    Om \code{\url{~}/dod/lab1} är aktuell katalog:
 
     \begin{GobbleCode}{6}
-        ~/ptdc-workspace/lab1/Calculator.java
-        (till hemkatalogen, ner i ptdc-workspace, ner i lab1)
+        ~/pgk/lab1/kojo.scala
+        (till hemkatalogen, ner i pfk, ner i lab1)
 
-        ../../ptdc-workspace/lab1/Calculator.java
-        (upp ett steg, upp ett steg, ner i ptdc-workspace, ner i lab1)
+        ../../pgk/lab1/kojo.scala
+        (upp ett steg, upp ett steg, ner i pgk, ner i lab1)
     \end{GobbleCode}
 
 \end{frame}
 
+
+% \begin{frame}[fragile=singleslide]
+%     \frametitle{Kommandotolk}
+%     Man kommunicerar med Unix eller Linux genom att ge kommandon. Ett särskilt program i operativsystemet, kommandotolken, ''shell'', läser in kommandona och utför det som ska göras.
+
+%     \pindent Det finns flera olika kommandotolkar. På Linuxdatorerna i E-huset används kommandotolken \code{bash} (''Bourne-Again SHell''). Andra vanliga kommandotolkar är \code{sh}, \code{zsh} och \code{csh}.
+
+%     \pindent Kommandotolken läser kommandon som ges i ett terminalfönster på skärmen. Så här arbetar tolken:
+
+%     \begin{GobbleCode}{4}
+%         Upprepa i all oändlighet:
+%             Läs ett kommando
+%             Om kommandot är ett riktigt kommando:
+%                 utför det som ska göras
+%             annars:
+%                 skriv ut felmeddelande
+%     \end{GobbleCode}
+
+% \end{frame}
+
 \begin{frame}[fragile=singleslide]
-    \frametitle{Kommandotolk}
-    Man kommunicerar med Unix eller Linux genom att ge kommandon. Ett särskilt program i operativsystemet, kommandotolken, ''shell'', läser in kommandona och utför det som ska göras.
+    \frametitle{Kommandotolk (shell) och terminal}
 
-    \pindent Det finns flera olika kommandotolkar. På Linuxdatorerna i E-huset används kommandotolken \code{bash} (''Bourne-Again SHell''). Andra vanliga kommandotolkar är \code{sh}, \code{zsh} och \code{csh}.
+    Termerna \emph{kommandotolk} och \emph{terminal} används ofta synonymt, men har olika betydelser:
+    \halfblankline
 
-    \pindent Kommandotolken läser kommandon som ges i ett terminalfönster på skärmen. Så här arbetar tolken:
+    \begin{description}
+        \item [Kommandotolk] För kommunikation med operativsystemet, via kommandon
+        \item [Terminal] Program som låter användaren skriva kommandon till kommandotolken
+        \item [Shell] Engelska för kommandotolk
+    \end{description}
 
+    \blankline
+    
+    Exempel på shells:
+    \begin{itemize}
+        \item \code{bash} (Bourne-Again SHell)
+        \item \code{sh}, \code{zsh}, \code{csh}
+    \end{itemize}
+
+\end{frame}
+
+\begin{frame}[fragile=singleslide]
+    \frametitle{Kommandotolk (shell) och terminal}
+
+    Så här fungerar en kommandotolk:
     \begin{GobbleCode}{4}
         Upprepa i all oändlighet:
             Läs ett kommando
@@ -177,6 +269,65 @@
     \end{GobbleCode}
 
 \end{frame}
+
+\begin{frame}[fragile=singleslide]
+    \frametitle{Bash vs. Zsh för Mac-användare}
+
+    \textbf{Bash och Zsh:}
+    \begin{itemize}
+        \item Bash är standard i de flesta Linux-system.
+        \item Zsh är standard i macOS från Catalina.
+        \item Båda är kraftfulla skal i Unix-system.
+        \item För grundläggande användning, t.ex. denna kurs, fungerar båda bra.
+    \end{itemize}
+
+    \textbf{Att byta till Bash (valfritt):}
+    \begin{itemize}
+        \item Öppna Terminal och skriv \code{bash} för att temporärt byta till Bash.
+        \item Installera senaste Bash via Homebrew: \code{brew install bash}
+    \end{itemize}
+
+    \textbf{Skillnader:}
+    \begin{itemize}
+        \item Zsh upplevs av många som mer användarvänligt. Erbjuder fler funktioner och anpassningsmöjligheter, men kan vara överväldigande för nybörjare.
+        \item Bash är mer konservativt och har bättre kompatibilitet.
+    \end{itemize}
+
+\end{frame}
+
+\begin{frame}[fragile=singleslide]
+    \frametitle{Unix-shellalternativ för Windows-användare}
+
+    \textbf{Git Bash:}
+    \begin{itemize}
+        \item Enkel Bash-tillgång, minimal konfiguration.
+        \item Installeras med Git för Windows.
+    \end{itemize}
+
+    \textbf{WSL (Windows Subsystem for Linux):}
+    \begin{itemize}
+        \item Kör fullständig Linux i Windows.
+    \end{itemize}
+
+    \textbf{Cygwin:}
+    \begin{itemize}
+        \item Ger bred Unix-vertygsuppsättning.
+        \item Mer konfiguration.
+    \end{itemize}
+
+    \blankline
+    \textbf{Vilket ska jag välja?}
+    \begin{itemize}
+        \item \textbf{Git Bash}: Grundläggande Bash och Git. (Rekommenderas)
+        \item \textbf{WSL}: Fullständig Linux-utveckling. (Rekommenderas)
+        \item \textbf{Cygwin}: Omfattande Unix-funktionalitet. (Avråds)
+    \end{itemize}
+
+\end{frame}
+
+
+
+
 
 \begin{frame}[fragile=singleslide]
     \frametitle{Kommandoformat}
@@ -197,7 +348,7 @@
 
     \halfblankline
     \begin{tabular}{lp{60mm}}
-        \code{scalac Calc.scala}  & Kompilerar \code{Calc.scala} med Scalakompilatorn, skapar \code{Calc.class}                                                     \\
+        \code{scalac Calc.scala}  & Kompilerar \code{Calc.scala} med Scalakompilatorn                                         \\
         \code{cp -i report.tex old.tex} & Kopierar \code{report.tex} till \code{old.tex}. \code{-i} betyder att systemet frågar om \code{old.tex} ska skrivas över, om den redan finns. \\
     \end{tabular}
 \end{frame}
@@ -229,28 +380,49 @@
     \end{tabular}
 \end{frame}
 
+% \begin{frame}[fragile=singleslide]
+%     \frametitle{Filskydd 1}
+%     Varje fil har en ägare. Ägaren identifieras med användarnamn och grupp, till exempel \code{ma1337no-s} i gruppen \code{students}.
+
+%     \pindent Ägaren kan skydda filer så att andra inte kan komma åt dem, eller göra dem publika så att andra kan komma åt dem.
+
+%     \pindent För att ta reda på filskydd och ägare (och storlek och datum) för filer kan man använda kommandot \code{ls} med optionen \code{l}, alltså \code{ls -l}:
+%     \begin{GobbleCode}{6}
+%         hacke-3{ma1337no-s}: ls -l
+%         -rw-r-----  1 ma1337no-s  students  4940 aug 21 11:14 example.txt
+%          (skydd)      (ägare)   (grupp)
+%     \end{GobbleCode}
+
+% \end{frame}
+
+
 \begin{frame}[fragile=singleslide]
     \frametitle{Filskydd 1}
-    Varje fil har en ägare. Ägaren identifieras med användarnamn och grupp, till exempel \code{dat14xyn} i gruppen \code{students}.
 
-    \pindent Ägaren kan skydda filer så att andra inte kan komma åt dem, eller göra dem publika så att andra kan komma åt dem.
+    \textbf{Filägande:}
+    \begin{itemize}
+        \item Ägare identifieras via användarnamn och grupp (t.ex., \code{ma1337no-s} i \code{students})
+    \end{itemize}
 
-    \pindent För att ta reda på filskydd och ägare (och storlek och datum) för filer kan man använda kommandot \code{ls} med optionen \code{l}, alltså \code{ls -l}:
+    \textbf{Filsäkerhet:}
+    \begin{itemize}
+        \item Ändra åtkomsträttigheter för att skydda eller dela filer
+    \end{itemize}
+
+    \textbf{Visa detaljer:}
     \begin{GobbleCode}{6}
-        hacke-3{dat14xyn}: ls -l
-        -rw-r-----  1 dat14xyn  students  4940 aug 21 11:14 example.txt
-         (skydd)      (ägare)   (grupp)
+        hacke-3{ma1337no-s}: ls -l
+        -rw-r-----  1 ma1337no-s  students  4940 aug 21 11:14 example.txt
+         (skydd)       (ägare)     (grupp)
     \end{GobbleCode}
 
 \end{frame}
 
 
-
-
 \begin{frame}[fragile=singleslide]
     \frametitle{Filskydd 2}
     \begin{GobbleCode}{6}
-        -rw-r-----  1 dat14xyn  students  4940 aug 21 11:14 example.txt
+        -rw-r-----  1 ma1337no-s  students  4940 aug 21 11:14 example.txt
           u  g  o
     \end{GobbleCode}
 
@@ -276,29 +448,29 @@
     \frametitle{Filskydd 3}
     Kommando för att ändra filskydd:
 
-    \begin{Code}
+    \begin{GobbleCode}{4}
         chmod skydd fil1 fil2 ...
-    \end{Code}
+    \end{GobbleCode}
 
     Filskydd kan anges symboliskt, till exempel \code{u=rw,o=r}, men också numeriskt, där man anger skydden som är satta med ettor, de som inte är satta med nollor. Till exempel:
 
-    \begin{Code}
+    \begin{GobbleCode}{4}
         x = 001, w = 010, r = 100, rx = 101, rw = 110, rwx = 111
-    \end{Code}
+    \end{GobbleCode}
 
 
     Siffrorna tolkar man sedan som binära tal, vilket ger:
 
-    \begin{Code}
+    \begin{GobbleCode}{4}
         x = 1, w = 2, r = 4, rx = 5, rw = 6, rwx = 7
-    \end{Code}
+    \end{GobbleCode}
 
 
     Fullständiga numeriska filskydd blir till exempel:
 
-    \begin{Code}
+    \begin{GobbleCode}{4}
         604 <=> u=rw,o=r    705 <=> u=rwx,o=rx
-    \end{Code}
+    \end{GobbleCode}
 \end{frame}
 
 \begin{frame}[fragile=singleslide]
@@ -307,9 +479,9 @@
 
     \blankline
     \begin{tabular}{p{2.2cm}p{8cm}}
-        \commandchar{Delete}                      & Tag bort tecknet till vänster om markören.                                \\
+        \commandchar{Delete}                      & Ta bort tecknet till vänster om markören.                                 \\
         \commandchar{Control-U}                   & Radera hela raden.                                                        \\
-        \commandchar{$\leftarrow$\ $\rightarrow$} & Flytta sig på raden.                                                      \\
+        \commandchar{$\leftarrow$\ $\rightarrow$} & Flytta markören på raden.                                                 \\
         \commandchar{Tab}                         & Filnamnskomplettering (man behöver bara skriva början av ett långt namn). \\
     \end{tabular}
 
@@ -318,9 +490,9 @@
 
     \blankline
     \begin{tabular}{p{2.2cm}p{8cm}}
-        \code{$\uparrow$} & Återkalla senaste kommando (kan upprepas).                                    \\
-        \code{!!}         & Gör om senaste kommando.                                                      \\
-        \code{!abc}       & Gör om senaste kommando som inleds med \code{abc}, till exempel \code{!javac} \\
+        \code{$\uparrow$} \code{$\downarrow$} & Bläddra bland tidigare kommandon.                 \\
+        \code{!abc}                           & Gör om senaste kommando som inleds med \code{abc}. \\
+        \code{!!}                             & Gör om senaste kommando.                          \\
     \end{tabular}
 \end{frame}
 
@@ -335,22 +507,52 @@
     \end{tabular}
 
     \blankline
-    Antag att vi har följande filer i vår katalog: \code{Test1.java}, \code{Test2.java}, \code{Test23.java}, \code{Final.java}, \code{Test1.class}, \code{Test2.class}, \code{Final.class}, \code{FinalReport.tex}, \code{Outline.tex}.
+    Antag att vi har följande filer i vår katalog:
+    \begin{GobbleCode}{4}
+        Test1.java  Test2.java  Test23.java  Final.java
+        Test1.class Test2.class Final.class  FinalReport.tex
+        Outline.tex
+    \end{GobbleCode}
 
+    Då kan vi till exempel skriva:
 
-    \begin{Code}
+    \begin{GobbleCode}{4}
         javac Test?.java (javac Test1.java Test2.java)
         rm *.class       (rm Test1.class Test2.class Final.class)
         gedit F*.tex     (gedit FinalReport.tex)
-    \end{Code}
+    \end{GobbleCode}
 
 \end{frame}
 
+% \begin{frame}[fragile=singleslide]
+%     \frametitle{Initieringsfiler}
+%     Många program läser en initieringsfil när de startas. Initieringsfilen innehåller inställningar för programmet. Namnen på initieringsfilerna inleds med punkt, så man ser normalt inte dessa filer när man gör \code{ls}.
+
+%     \pindent \code{bash} läser initieringsfilen \code{.bash\_profile} när ett nytt terminalfönster skapas. Bra rader att ha i denna fil (gör att man alltid får frågor om man verkligen vill ta bort/skriva över filer):
+
+%     \begin{Code}
+%         alias rm='rm -i'
+%         alias cp='cp -i'
+%         alias mv='mv -i'
+%     \end{Code}
+
+%     Varning: kopiera inte andras initieringsfiler om du inte begriper vad som står i dem!
+% \end{frame}
+
 \begin{frame}[fragile=singleslide]
     \frametitle{Initieringsfiler}
-    Många program läser en initieringsfil när de startas. Initieringsfilen innehåller inställningar för programmet. Namnen på initieringsfilerna inleds med punkt, så man ser normalt inte dessa filer när man gör \code{ls}.
 
-    \pindent \code{bash} läser initieringsfilen \code{.bash\_profile} när ett nytt terminalfönster skapas. Bra rader att ha i denna fil (gör att man alltid får frågor om man verkligen vill ta bort/skriva över filer):
+    \textbf{Om initieringsfiler:}
+    \begin{itemize}
+        \item Används ofta för att konfigurera program.
+        \item Filnamn börjar med punkt och är dolda, s.k. \emph{punktfiler}.
+    \end{itemize}
+    
+    \textbf{\code{bash} initieringsfil:}
+    \begin{itemize}
+        \item bash läser \code{.bash\_profile} (från hemkatalogen) när ett nytt terminalfönster öppnas.
+        \item Nyttiga alias för att förhindra oavsiktliga filoperationer:
+    \end{itemize}
 
     \begin{Code}
         alias rm='rm -i'
@@ -358,50 +560,122 @@
         alias mv='mv -i'
     \end{Code}
 
-    Varning: kopiera inte andras initieringsfiler om du inte begriper vad som står i dem!
+    \textbf{Varning:}
+    \begin{itemize}
+        \item Kopiera inte initieringsfiler utan att förstå innehållet!
+    \end{itemize}
+
 \end{frame}
+
+
+% \begin{frame}[fragile=singleslide]
+%     \frametitle{Vad är egentligen ett kommando?}
+%     Kommandon är av två slag:
+
+%     \begin{description}
+%         \item[''inbyggda''] små kommandon som exekveras direkt i kommandotolken, till exempel \code{cd}, \code{pwd}, \code{exit}
+%         \item[''vanliga program''] kommandotolken letar efter ett program med samma namn som kommandot
+%     \end{description}
+
+%     Kommandotolken letar efter program i de kataloger som anges i sökvägen (operativsystemvariabeln \code{PATH}, som man själv kan sätta med kommandot \code{export}). När man till exempel skriver \code{javac X.java} exekveras programmet \code{/usr/bin/javac}, eftersom katalogen \code{/usr/bin} finns i sökvägen.
+
+%     \pindent När man ska exekvera ett eget program som finns i den aktuella katalogen skriver man:
+%     \begin{Code}
+%         ./programnamn
+%     \end{Code}
+
+%     \code{./} är nödvändigt eftersom \code{.} (den aktuella katalogen) inte finns i sökvägen.
+% \end{frame}
 
 \begin{frame}[fragile=singleslide]
     \frametitle{Vad är egentligen ett kommando?}
-    Kommandon är av två slag:
 
+    \textbf{Typer av kommandon:}
     \begin{description}
-        \item[''inbyggda''] små kommandon som exekveras direkt i kommandotolken, till exempel \code{cd}, \code{pwd}, \code{exit}
-        \item[''vanliga program''] kommandotolken letar efter ett program med samma namn som kommandot
+        \item[Inbyggda] Direkt exekverade i kommandotolken (t.ex. \code{cd}, \code{pwd}, \code{exit}).
+        \item[Vanliga program] Kommandotolken söker efter programfiler i \code{PATH}.
     \end{description}
 
-    Kommandotolken letar efter program i de kataloger som anges i sökvägen (operativsystemvariabeln \code{PATH}, som man själv kan sätta med kommandot \code{export}). När man till exempel skriver \code{javac X.java} exekveras programmet \code{/usr/bin/javac}, eftersom katalogen \code{/usr/bin} finns i sökvägen.
+    \textbf{Programexekvering:}
+    \begin{itemize}
+        \item \code{PATH} definierar var program letas upp (\code{export PATH=...} för anpassning).
+        \item Ex: \code{/usr/bin/javac} finns i \code{PATH}, så \code{javac X.java} går att köra.
+    \end{itemize}
 
-    \pindent När man ska exekvera ett eget program som finns i den aktuella katalogen skriver man:
+    \textbf{Köra egna program:}
     \begin{Code}
         ./programnamn
     \end{Code}
+    Använd \code{./} för program i den aktuella katalogen, eftersom \code{.} inte ingår i \code{PATH}.
 
-    \code{./} är nödvändigt eftersom \code{.} (den aktuella katalogen) inte finns i sökvägen.
 \end{frame}
 
+
+% \begin{frame}[fragile=singleslide]
+%     \frametitle{Processer}
+%     Varje program som körs i Unix körs som en egen process som exekverar självständigt, ''parallellt'' med andra processer. Varje process körs några millisekunder, sedan får nästa process exekvera, osv. Detta hanteras av operativsystemet.
+
+%     \pindent När man exekverar ett program från ett terminalfönster ''låser'' programmet fönstret tills det avslutas --- så vill man ofta att det ska fungera.
+
+%     \pindent Men man kan också köra program ''i bakgrunden'' dvs frikopplade från terminalfönstret. Det gör man genom att skriva \code{\&} sist på kommandoraden, till exempel:
+
+%     \begin{Code}
+%         gedit example.txt &
+%     \end{Code}
+
+% \end{frame}
 \begin{frame}[fragile=singleslide]
     \frametitle{Processer}
-    Varje program som körs i Unix körs som en egen process som exekverar självständigt, ''parallellt'' med andra processer. Varje process körs några millisekunder, sedan får nästa process exekvera, osv. Detta hanteras av operativsystemet.
 
-    \pindent När man exekverar ett program från ett terminalfönster ''låser'' programmet fönstret tills det avslutas --- så vill man ofta att det ska fungera.
+    \textbf{Grundläggande om Processer:}
+    \begin{itemize}
+        \item Varje program körs som en egen process, oberoende och ''parallellt'' med andra.
+        \item Processväxling sker kontinuerligt, hanteras automatiskt av operativsystemet.
+    \end{itemize}
 
-    \pindent Men man kan också köra program ''i bakgrunden'' dvs frikopplade från terminalfönstret. Det gör man genom att skriva \code{\&} sist på kommandoraden, till exempel:
+    \textbf{Exekvering i Terminal:}
+    \begin{itemize}
+        \item Standard: Kommandotolken väntar på programmet. Terminalen framstår som upptagen tills programmet avslutas.
+        \item Bakgrundskörning: Använd \code{\&} för att köra programmet frikopplat från terminalen.
+    \end{itemize}
 
+    \textbf{Exempel:}
     \begin{Code}
         gedit example.txt &
     \end{Code}
+    \textit{Öppnar \code{gedit} i bakgrunden, terminalen blir omedelbart tillgänglig för nya kommandon.}
 
 \end{frame}
 
+
+% \begin{frame}[fragile=singleslide]
+%     \frametitle{Fönstersystem, skrivbordsmiljö}
+%     I Unix och Linux är fönstersystemet inte inbyggt (Unix utvecklades långt innan det fanns grafiska skärmar).
+
+%     \pindent De flesta Unix- och Linuxsystem som kör på persondatorer använder fönstersystemet X Window System, som oftast kallas bara X. X gör det möjligt att ha fönster på skärmen, att flytta dem, ikonifiera dem, osv.
+
+%     \pindent Exakt hur fönstren ska se ut och hur man arbetar med dem bestäms av \emph{fönsterhanteraren}, som också är ett separat program. Ovanpå fönsterhanteraren finns skrivbordsmiljön.
+
+%     \pindent Det bästa (enda) sättet att lära sig att använda en skrivbordsmiljö är att träna!
+% \end{frame}
 \begin{frame}[fragile=singleslide]
     \frametitle{Fönstersystem, skrivbordsmiljö}
-    I Unix och Linux är fönstersystemet inte inbyggt (Unix utvecklades långt innan det fanns grafiska skärmar).
 
-    \pindent De flesta Unix- och Linuxsystem som kör på persondatorer använder fönstersystemet X Window System, som oftast kallas bara X. X gör det möjligt att ha fönster på skärmen, att flytta dem, ikonifiera dem, osv.
+    \textbf{Fönstersystem:}
+    \begin{itemize}
+        \item I Unix och Linux är fönstersystemet inte inbyggt (Unix utvecklades långt innan det fanns grafiska skärmar).
+        \item Fönstersystemet X Window System (ofta kallat \emph{X}).
+    \end{itemize}
 
-    \pindent Exakt hur fönstren ska se ut och hur man arbetar med dem bestäms av \emph{fönsterhanteraren}, som också är ett separat program. Ovanpå fönsterhanteraren finns skrivbordsmiljön.
+    \textbf{Fönsterhanterare och skrivbordsmiljö:}
+    \begin{itemize}
+        \item Fönsterhanteraren bestämmer utseende och funktion hos fönstren.
+        \item Skrivbordsmiljön bygger vidare på fönsterhanteraren för en fullständig användarupplevelse.
+    \end{itemize}
 
-    \pindent Det bästa (enda) sättet att lära sig att använda en skrivbordsmiljö är att träna!
+    \textbf{Lära sig skrivbordsmiljön:}
+    \begin{itemize}
+        \item För många av er är Linux nytt. Bästa sättet att bli bekant med en skrivbordsmiljö är att träna!
+    \end{itemize}
+
 \end{frame}
-
